news vorschau fixes

--- a/wp-content/themes/r-bs-theme/assets/css/style.css
+++ b/wp-content/themes/r-bs-theme/assets/css/style.css
@@ -39,6 +39,10 @@
   aside{
     background-color: #BFD8E6;
   }
+  .entry-summary img, .entry-content img{
+    width: 100%;
+    height: 100%;
+  }
 /* ==========================================================================
    Header
    ========================================================================== */
