--- a/wp-content/themes/r-bs-theme/assets/css/style.css
+++ b/wp-content/themes/r-bs-theme/assets/css/style.css
@@ -7,6 +7,9 @@
     margin-bottom: 30px;
     font-family: 'Droid Sans', sans-serif;
     height: 100%;
+    background-image: url("../img/top_blue_bg.gif");
+    background-position: 0px 208px;
+    background-repeat: repeat-x;
   }
   h1, h2, h3{
     color: #4A6A8F;
@@ -46,14 +49,21 @@
 /* ==========================================================================
    Header
    ========================================================================== */
-
+   .slider_overlay{
+    background-image: url("../img/slider_welle.gif");
+    background-repeat: no-repeat;
+    height: 165px;
+    width: 325px;
+    position: absolute;
+    z-index: 1111;
+   }
    .widget_mqtranslate > ul{
     list-style: none;
     padding-left: 0;
   }
   .widget_mqtranslate li{
     display: inline-block;
-    padding:0 10px 0 0;
+    padding:0 0 0 10px;
   }
   header ul{
     margin-bottom: 3px;
