media queries started

--- a/wp-content/themes/r-bs-theme/assets/css/helper.css
+++ b/wp-content/themes/r-bs-theme/assets/css/helper.css
@@ -117,3 +117,12 @@
 .dt{
 	display: table;
 }
+
+/* ==========================================================================
+   Background
+   ========================================================================== */
+
+.bgcw{
+	background-color: white;
+}
+
