--- a/wp-content/themes/r-bs-theme/assets/css/media.css
+++ b/wp-content/themes/r-bs-theme/assets/css/media.css
@@ -58,7 +58,7 @@
     display: block;
   }
   body{
-    margin-top: 0;
+    margin-top: 50px;
     margin-bottom: 0;
     background-image: none;
   }
